OO-3638: catch arithmetic exception by course element access evaluation